# project_django_with_react

./: .gitignore  README.md  m.sh  pyproject.toml  requirements.txt  run.sh
core/: routers.py
core/abstract/: models.py
core/auth/serializers/: login.py  register.py
core/auth/viewsets/: __init__.py  login.py  refrash.py  register.py
core/post/: apps.py  models.py  serializers.py  viewsets.py
core/post/migrations/: 0001_initial.py  0002_initial.py
core/user/: models.py  serializers.py  viewsets.py
core/user/migrations/: 0001_initial.py  0002_alter_user_managers_user_is_staff_alter_user_created_and_more.py
